# multimethods

./: .gitignore  LICENSE  README  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi-publish.yml
benchmarks/: compare_dispatch.py
multimethods/: __init__.py  core.py  errors.py
research_multimethods_revival/: design_spec.md  research_plan.md
tests/: test_dispatch.py  test_guards.py  test_methods.py  test_multimethod.py  test_registration.py
