[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "multimethods"
version = "2.0.0"
description = "Modern multiple dispatch for Python 3.12+ with explicit ambiguity handling, callable guards, and method fallback."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Robert Kende" },
]
keywords = [
  "multimethod",
  "multidispatch",
  "multiple-dispatch",
  "dispatch",
  "overload",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.2",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["multimethods"]

[tool.pytest.ini_options]
addopts = ["-ra"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
]

[tool.ruff.lint.per-file-ignores]
"benchmarks/*.py" = ["F811"]
"tests/*.py" = ["F811"]
